<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".routeGen.RouteGenActivity"
    android:background="#26886C91"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/route_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#886c91"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/selectedGymName"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical|center_horizontal"
            android:padding="-16dp"
            android:text="@string/selected_gym"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>


    <Spinner
        android:id="@+id/select_difficulty"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_white"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="none"
        android:paddingStart="10pt"
        app:layout_constraintEnd_toStartOf="@+id/generate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_toolbar" />

    <Button
        android:id="@+id/generate"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/generate"
        android:textAllCaps="false"
        android:background="@drawable/bg_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/route_toolbar" />

<!--    <Button-->
<!--        android:id="@+id/save_route"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:enabled="false"-->
<!--        android:text="@string/save_route"-->
<!--        android:textAllCaps="false"-->
<!--        android:background="@drawable/bg_white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/view_in_ar"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/route_image"-->
<!--        app:layout_constraintVertical_bias="0.506" />-->

<!--    <Button-->
<!--        android:id="@+id/view_in_ar"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:enabled="false"-->
<!--        android:text="@string/view_route_in_AR"-->
<!--        android:textAllCaps="false"-->
<!--        android:background="@drawable/bg_white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/save_route"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/route_image" />-->
    <Button
        android:id="@+id/view_in_ar"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_white"
        android:enabled="false"
        android:text="@string/view_route_in_AR"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_image" />

    <ImageView
        android:id="@+id/route_image"
        android:layout_width="0dp"
        android:layout_height="470dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_difficulty"
        app:srcCompat="@drawable/logo_white" />


</androidx.constraintlayout.widget.ConstraintLayout>