<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26886C91"
    tools:context=".route.RouteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/route_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#886c91"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        android:elevation="4dp"
        app:contentInsetStartWithNavigation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >

        <TextView
            android:id="@+id/selectedGymName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:padding="8dp"
            android:text="@string/selected_gym"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="10dp" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/difficulty" />

        <TextView
            android:id="@+id/selectedRouteName"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/selected_route" />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/viewAR"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/view_route_in_AR"
        android:textAllCaps="false"
        android:background="@drawable/bg_white"
        app:layout_constraintBottom_toTopOf="@+id/deleteRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeImage" />


    <Button
        android:id="@+id/deleteRoute"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete_route"
        android:textAllCaps="false"
        android:background="@drawable/bg_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAR" />

    <ImageView
        android:id="@+id/routeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/uni_board"
        app:layout_constraintBottom_toTopOf="@+id/viewAR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/route_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>