...
    android:minHeight="50dp"
    android:orientation="horizontal"

    >

    <TextView
        android:id="@+id/routeItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="left|center_vertical"
        android:layout_marginStart="32dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/routeItemDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|center_vertical"
        android:layout_marginEnd="32dp"
...
